--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "sqlite3": "^5.1.4",
+    "styled-components": "^5.3.6",
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.0"
   }
 }
