--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
     "sqlite3": "^5.1.4",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4",
